# wpd

wpd-0.0/: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  wpd.ebuild.in
wpd-0.0/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.2t  traces.3
wpd-0.0/doc/: Makefile  Makefile.am  Makefile.in  index.php
wpd-0.0/panel-plugin/: Makefile  Makefile.am  Makefile.in  charge-icon.h  convert-icons.sh  libwpdmon.la  libwpdmon_la-rich_progress_bar.lo  libwpdmon_la-wpdmon.lo  mhz-icon.h  prova  prova.c  rate-icon.h  rich_progress_bar.c  rich_progress_bar.h  speed-icon.h  wpdmon.c
wpd-0.0/panel-plugin/.deps/: libwpdmon_la-rich_progress_bar.Plo  libwpdmon_la-wpdmon.Plo
wpd-0.0/panel-plugin/.libs/: libwpdmon.lai
wpd-0.0/src/: Makefile  Makefile.am  Makefile.in  libwpd.la  test.c  wpd  wpd.conf  wpd.h  wpd_collect_data.c  wpd_commands.h  wpd_commons.c  wpd_commons.lo  wpd_config.c  wpd_cpu.c  wpd_main.c  wpd_system.c
wpd-0.0/src/.deps/: wpd_collect_data.Po  wpd_commons.Plo  wpd_config.Po  wpd_cpu.Po  wpd_main.Po  wpd_system.Po
wpd-0.0/src/.libs/: libwpd.lai  libwpd.so.0.0.0  wpd
wpd-0.0/wpc/: Makefile  Makefile.am  Makefile.in  wpc  wpc.c
wpd-0.0/wpc/.deps/: wpc.Po
wpd-0.0/wpc/.libs/: wpc
wpd-0.0/wpk/: Makefile  Makefile.am  Makefile.in  libwpk.la  wpk.c  wpk.la  wpk_la-wpk.lo
wpd-0.0/wpk/.deps/: wpk_la-wpk.Plo
wpd-0.0/wpk/.libs/: wpk.lai  wpk.so.0.0.0
